--- a/kobas-ios/Base.lproj/Main.storyboard
+++ b/kobas-ios/Base.lproj/Main.storyboard
@@ -53,7 +53,7 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="1337" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lZO-PU-9zK">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="2715" borderStyle="roundedRect" placeholder="1337" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lZO-PU-9zK">
                                 <rect key="frame" x="12" y="319" width="347" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
@@ -78,7 +78,7 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="catherine.halsey" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jZj-g4-C3k">
+                            <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="alex.forbes-reed" borderStyle="roundedRect" placeholder="catherine.halsey" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jZj-g4-C3k">
                                 <rect key="frame" x="12" y="395" width="347" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="DWu-KO-dci"/>
