--- a/kobas-ios/Base.lproj/Main.storyboard
+++ b/kobas-ios/Base.lproj/Main.storyboard
@@ -78,7 +78,7 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="alex.forbes-reed" borderStyle="roundedRect" placeholder="catherine.halsey" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jZj-g4-C3k">
+                            <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="catherine.halsey" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jZj-g4-C3k">
                                 <rect key="frame" x="12" y="395" width="347" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="DWu-KO-dci"/>
